--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@actualwave/log-data-renderer",
   "description": "Convert source data into sets of strings that can be displayed in console for debug.",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "main": "index.js",
+  "type":"module",
   "keywords": [
     "js",
     "javascript",
