--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@actualwave/log-data-renderer",
   "description": "Convert source data into sets of strings that can be displayed in console for debug.",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "main": "index.js",
-  "type":"module",
+  "exports": [
+    "./source/index.js"
+  ],
   "keywords": [
     "js",
     "javascript",
