--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@actualwave/log-data-renderer",
   "description": "Convert source data into sets of strings that can be displayed in console for debug.",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "main": "index.js",
+  "module": "source/index.js",
   "exports": [
     "./source/index.js"
   ],
